--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "genesisbarrios.xyz",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=24"
+  },
   "dependencies": {
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
